tests/NormalTests/paczka2/big_fuzzy/37226556.err
Error in line 1: 08xBVcl0h A459 87,9
Error in line 4: UqCBB3 A459 69,D
Error in line 8: UqCBB3 A459 6,9
Error in line 18: A225 S718 66,5
Error in line 20: GKZW A459 41,6
Error in line 44: A225 S322 21,3
Error in line 45: A225 S718 87,0
Error in line 36: UqCBB3 A225 83,4
Error in line 49: UqCBB3 A459 31,9
Error in line 54: A225 A225 17,0
Error in line 74: 08xBVcl0h A225 18,8
Error in line 84: jpC6R7ay8h S718 246,8
Error in line 93: jpC6R7ay8h A225 10,6
Error in line 91: S7LPu S322 69,1
Error in line 99: 8RQggrWLU A225 -2,1
Error in line 105: A225 S322 45,2
Error in line 112: A225 A225 55,64
Error in line 109: jpC6R7ay8h A459 10,6
Error in line 110: A225 A459 29,4
Error in line 118: jpC6R7ay8h S718 71,9
Error in line 120: jpC6R7ay8h S322 88,1
Error in line 122: jpC6R7ay8h A225 57,8
Error in line 117: A225 A225 59,8
Error in line 129: UqCBB3 S322 40,9
Error in line 92: 8RQggrWLU A225 63,5
Error in line 133: UqCBB3 A459 16,8
Error in line 135: 8RQggrWLU S322 91,8
Error in line 146: jpC6R7ay8h A459 48,82
Error in line 155: 8RQggrWLU S718 27,7
Error in line 156: 8RQggrWLU S322 82,7
Error in line 141: jpC6R7ay8h A459 39,2
Error in line 163: GKZW S718 -1,9
Error in line 167: jpC6R7ay8h S322 5,3
Error in line 166: GKZW S718 2,1
Error in line 181: 8RQggrWLU A225 7,9
Error in line 189: S7LPu Sm22 7m,5
Error in line 188: S7LPu S322 30,1
Error in line 198: A225 A459 13,6
Error in line 219: UqCBB3 A459 -2,3
Error in line 217: GKZW S322 77,3
Error in line 220: jpC6R7ay8h S322 222,0
Error in line 234: 8RQggrWLU S718 47,9
Error in line 237: jpC6R7ay8h A225 34,8
Error in line 232: 08xBVcl0h A459 14,8
Error in line 242: A225 A459 10,6
Error in line 218: UqCBB3 A459 58,0
Error in line 240: jpC6R7ay8h A459 34,9
